# mini-dns

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.sample.toml  docker-compose.yml
.github/workflows/: docs.yml  release.yml
docs/: index.html  style.css
examples/: loadtest.rs
src/: acl.rs  blocklist.rs  cache.rs  config.rs  dnssec.rs  doh.rs  doq.rs  forwarder.rs  lib.rs  main.rs  metrics.rs  ratelimit.rs  recursive.rs  server.rs  state.rs  tls.rs
src/dns/: encoder.rs  error.rs  header.rs  mod.rs  packet.rs  question.rs  record.rs  resolver.rs
tests/: axfr.rs  axfr_integration.rs  blocklist.rs  config.rs  dns.rs  dnssec_integration.rs  doq_integration.rs  encrypted.rs  forwarding.rs  multizone.rs  server.rs
zones/: example.zone
