[package]
name = "mini-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7"
base64 = "0.22"
bytes = "1"
core_affinity = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
crossbeam-utils = "0.8"
dashmap = "6.1"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
quinn = "0.11"
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
socket2 = "0.5"
toml = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"
